Updated NTFS-3G code from version 2014.2.15 to 2015.3.14.

--- a/releasenotes
+++ b/releasenotes
@@ -2,3 +2,8 @@ ntfs3g-handler 53.1 (16.7.2015)
 
 - First released version.
 
+
+ntfs3g-handler 53.2 (3.8.2015)
+
+- Updated NTFS-3G code from version 2014.2.15 to 2015.3.14.
+
