--- a/releasenotes
+++ b/releasenotes
@@ -17,5 +17,6 @@ ntfs3g-handler 53.3 (25.12.2015)
 
 ntfs3g-handler 53.4 (xx.xx.2016)
 
-- Replaced splay functions with more efficient ones.
+- Significant rewrite of the disk I/O layer to be more like the latest AmigaOS
+  4.x version.
 
