--- a/releasenotes
+++ b/releasenotes
@@ -15,10 +15,10 @@ ntfs3g-handler 53.3 (25.12.2015)
 - Replaced sscanf() with a strtol() wrapper.
 
 
-ntfs3g-handler 53.4 (xx.xx.2016)
+ntfs3g-handler 53.4 (3.2.2016)
 
-- Significant rewrite of the disk I/O layer to be more like the latest AmigaOS
-  4.x version.
+- Disk I/O layer now uses a segmented LRU for the read cache and automatically
+  sorted block ranges for the write cache.
 
 - Replaced cache semaphore with a simple boolean variable that indicates to
   the memhandler when the cache is being accessed.
